tests/ui/wf/wf-where-clauses-pre-normalization.stderr
error[E0309]: the parameter type `T` may not live long enough
  --> $DIR/wf-where-clauses-pre-normalization.rs:15:34
   |
LL | pub fn repro<'a, T>()
   |              -- the parameter type `T` must be valid for the lifetime `'a` as defined here...
LL | where
LL |     <View<&'a T> as Data>::Elem: Sized,
   |                                  ^^^^^ ...so that the reference type `&'a T` does not outlive the data it points at
   |
help: consider adding an explicit lifetime bound
   |
LL | pub fn repro<'a, T: 'a>()
   |                   ++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0309`.
